<resources>
    <string name="app_name">DEFILMS</string>
    <string name="indonesia">English</string>
    <string name="settings">Settings</string>
    <string name="settings_language">Settings Languages</string>
    <string name="title_film">Title Movie</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="date_releas">Date Releas</string>
    <string name="description">Description</string>
    <string name="first_releas">First Releas</string>
    <string name="title_tv_show">Title Tv Show</string>
    <string name="title">Title</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="oke">OKE</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tvshow">Detail TV Show</string>
    <string name="error_fav_movie">There is no Favorite Film yet</string>
    <string name="error_fav_tvshow">There is no Favorite Tv Show yet</string>
    <string name="title_favorite">Favorite</string>
    <string name="add_fav">Added to Favorite Movies</string>
    <string name="remove_fav">Removed from Favorite Movies</string>
    <string name="add_fav_tv">Added to Favorite Tv Show</string>
    <string name="remove_fav_tv">Removed from Favorite Tv Show</string>
    <string name="list_movie">List Movie</string>
    <string name="list_tvshow">List Tv Show</string>
    <string name="fab_button">fab button</string>
    <string name="share">share</string>
</resources>